--- a/project-folder/index.html
+++ b/project-folder/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eranga Home Page</title>
+    <title>Home Page</title>
 </head>
 <body>
+    <h1>Welcome to Home page</h1>
     
 </body>
 </html>
